--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first GithubRipo</title>
+    <title>My first Github Repo</title>
 </head>
 <body>
-    
+    <h1>This is Heading one</h1>
+    <h2>Mama, I can code now</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus eius fugit illum dignissimos eum blanditiis explicabo debitis sint. Necessitatibus quo cum eius reiciendis, magnam maiores quidem aspernatur et dolorum alias?</p>
+    <h3>New code changed</h3>
 </body>
 </html>
